add main files first time

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Entertainment React App",
+  "short_name": "Tik Tok Clone React App",
   "name": "Create React App Sample",
   "icons": [
     {
