--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "entertainment-app",
+  "name": "tik-tok-clone-app",
   "version": "0.1.0",
   "author": "Amir Diafi",
   "private": true,
